# LLM-Text-Completion-Semantic-Kernel

./: .env.example  README.md  pyproject.toml
skills/AuthoringSkill/Explanation/: config.json  skprompt.txt
text_completion/: main.py
