[tool.poetry]
name = "sk-python-Text-Completion"
version = "0.1.0"
description = "LLM-Text-Completion using the semantic kernel"
authors = ["Amit Puri <amit.puri@amitpuri.com>"]
readme = "README.md"
packages = [{include = "text_completion"}]

[tool.poetry.dependencies]
python = "^3.8"
semantic-kernel = "^0.2.7.dev0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
